# gocv

./: .gitignore  aruco.h  asyncarray.h  calib3d.h  cgo.go  core.h  dnn.go  dnn.h  features2d.h  highgui_gocv.h  imgcodecs.h  imgproc.h  mvsc.h  objdetect.h  photo.h  svd.h  version.h  video.h  videoio.h
contrib/: bgsegm.h  cgo.go  face.h  img_hash.h  tracking.h  wechat_qrcode.h  xfeatures2d.h  ximgproc.h  xphoto.h
cuda/: arithm.h  bgsegm.h  cgo.go  core.h  cuda.go  cuda.h  filters.h  imgproc.h  objdetect.h  optflow.h  warping.h
opencv_connect/: CMakeLists.txt
opencv_connect/contrib/: CMakeLists.txt
opencv_connect/cuda/: CMakeLists.txt  cuda.cpp
opencv_connect/gocv/: CMakeLists.txt  imgproc.cpp
